# stockPred

./: .gitignore  README.md  api.py  app.py  debug_darkmode.html  pyproject.toml  requirements.txt  start.sh  test_darkmode.html
api/: index.py
backend/: advanced_training_results.json  conservative_training_results.json  dynamic_training_results.json  high_confidence_training_results.json  main.py  optimized_training_results.json  realistic_training_results.json  simple_training_results.json  train_advanced_models.py  train_conservative_models.py  train_dynamic_models.py  train_high_confidence_models.py  train_models.py  train_optimized_models.py  train_realistic_models.py  train_realistic_models_v2.py  train_simple_models.py  train_ultra_models.py  training_results.json  ultra_training_results.json
data/: ASIANPAINT_data.csv  AXISBANK_data.csv  BAJFINANCE_data.csv  BHARTIARTL_data.csv  BPCL_data.csv  COALINDIA_data.csv  DIVISLAB_data.csv  DRREDDY_data.csv  GRASIM_data.csv  HCLTECH_data.csv  HDFCBANK_data.csv  HINDUNILVR_data.csv  ICICIBANK_data.csv  INFY_data.csv  ITC_data.csv  JSWSTEEL_data.csv  KOTAKBANK_data.csv  MARUTI_data.csv  NTPC_data.csv  ONGC_data.csv  POWERGRID_data.csv  RELIANCE_data.csv  SBIN_data.csv  SUNPHARMA_data.csv  TATAMOTORS_data.csv  TCS_data.csv  TECHM_data.csv  TITAN_data.csv  ULTRACEMCO_data.csv  WIPRO_data.csv  dataset_metadata.json  dataset_statistics.json  generate_dataset.py
frontend/: app.js  index.html
models/: advanced_stock_predictor.py  conservative_predictor.py  dynamic_predictor.py  high_confidence_predictor.py  (+6 more)
(+30 files in other folders)
